# biTurbo

./: .biTurbo  .biturboignore  .gitignore  .npmrc  404.html  AGENTS.md  INSTRUCTIONS.md  README.md  index.html  index.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.devin/rules/: biturbo.md
.github/workflows/: ci.yml  release.yml
.mavis/plans/: v0.2-features.yaml
.omo/run-continuation/: ses_15c226624ffe6tkaQRaU5cRuCW.json
.opencode/tmp/: .7bb7bff3f5bfff9c-00000000.dylib
.opencode/tmp/node-compile-cache/v22.22.2-x64-9ac5647c-501/: 1a47d6af  493f347f  5e1720ed  614f201a  6ee6c781  99f19bed  e29a675f  f1676b14
_next/static/0WOlVKT7OQvqQHxUXB90x/: _buildManifest.js
_next/static/chunks/: 130-878b7550865a81d8.js  271-30f187fd9273ec04.js  523-658d1312dd1d9625.js  cf27f35c-3173c9e28eaca44e.js  main-1d66f8e79cdd26b7.js  main-app-d95cd85e6481476d.js  webpack-31283f0267dfe6a4.js
_next/static/chunks/app/: layout-db68315b01c408f3.js  page-23779b7bab8d3124.js
_next/static/chunks/pages/: _app-7caa0fd6e3aa1f03.js  _error-7b6843aa0302a87e.js
_next/static/css/: 44619f44776e10ae.css
docs/: release.md
docs/release-notes/: v0.1.4.md  v0.1.5.md  v0.2.0.md
evals/: recall-golden.json
features/: index.html  index.txt
landing/: .gitignore  README.md  next.config.mjs  package.json  tailwind.config.ts
landing/.github/workflows/: deploy-landing.yml
landing/src/app/: globals.css  layout.tsx  page.tsx
landing/src/app/features/: page.tsx
landing/src/components/: CTASection.tsx  ComparisonSection.tsx  Footer.tsx  Hero.tsx  InstallSection.tsx  Logo.tsx  Marquee.tsx  Nav.tsx  ZoomSection.tsx
landing/src/components/visuals/: GraphVisual.tsx  InstallVisual.tsx  MCPVisual.tsx  (+3 more)
scripts/: build-sidecar.mjs  context-profiler.ts  ensure-sidecar-placeholder.mjs  extreme-search-test.ts  mcp-smoke-test.ts  recall-eval.ts  release.mjs  run-wsl-cuda.mjs  search-quality-test.ts  seed-memories.ts  test-mcp.py  watch-test.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: application.rs  commands.rs  consolidate.rs  db.rs  embed.rs  error.rs  index_engine.rs  ingest.rs  io.rs  lib.rs  main.rs  mcp.rs  memory.rs  operations.rs  persistence.rs  project.rs  recall.rs  scheduler.rs  smoke.rs  state.rs  tray.rs
src/components/: CodeBlock.tsx  ConfirmModal.tsx  ContextMenu.tsx  Heatmap.tsx  MemoryCard.tsx  MemoryDetail.tsx  QuickAdd.tsx  Sidebar.tsx  Toast.tsx  TopBar.tsx
src/lib/: api.ts  format.ts  store.ts  types.ts
src/views/: Agents.tsx  Graph.tsx  Memories.tsx  Overview.tsx  Projects.tsx  Settings.tsx  layoutWorker.ts
(+2 files in other folders)
