[package]
name = "biturbo"
version = "0.1.0"
description = "Local-first memory layer for AI coding agents. turbovec + Tauri 2 + MCP."
authors = ["you"]
edition = "2021"
rust-version = "1.77"
default-run = "biturbo"

[[bin]]
name = "biturbo"
path = "src/main.rs"

[[bin]]
name = "biturbo-mcp"
path = "src/bin/biturbo_mcp.rs"

[lib]
name = "biturbo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Storage
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
parking_lot = "0.12"
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Vector index
turbovec = "0.8"
ndarray = "0.16"

# Embeddings
fastembed = "4"
ort = "2.0.0-rc.9"

# MCP — using hand-rolled JSON-RPC for stability; rmcp deps kept off for now.
# rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }

# Tree-sitter (project indexing)
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-php = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-java = "0.23"
tree-sitter-kotlin = "0.3"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"

# Utilities
rayon = "1"
walkdir = "2"
ignore = "0.4"
notify = "7"
streaming-iterator = "0.1"
lru = "0.12"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = "1"
dirs = "5"
sha2 = "0.10"
hex = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
# opt-level 3 (not "s"): this crate is compute-bound — Hamming/dot-product scans
# in turbovec, ONNX pre/post-processing, tree-sitter parsing. Size-optimized
# builds disable the vectorization and inlining these depend on.
opt-level = 3
strip = true

# Dev builds: keep this crate fast to compile, but compile dependencies
# (turbovec, ort, tree-sitter grammars) optimized so debug runs aren't 10-50x slower.
[profile.dev.package."*"]
opt-level = 3

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
